--- a/Lec 08 AEC Editor+AI Integration/ai-assistants/package.json
+++ b/Lec 08 AEC Editor+AI Integration/ai-assistants/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@mdi/font": "^7.4.47",
     "marked": "^15.0.12",
     "openai": "^4.103.0"
